--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
+    "react-native-gesture-handler": "~1.5.0",
     "react-native-maps": "0.26.1",
-    "react-native-web": "~0.11.7"
+    "react-native-web": "~0.11.7",
+    "styled-components": "^4.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
