--- a/package.json
+++ b/package.json
@@ -9,14 +9,15 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
-    "expo": "~36.0.0",
+    "expo": "~35.0.0",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
     "react-native-gesture-handler": "~1.5.0",
     "react-native-maps": "0.26.1",
     "react-native-web": "~0.11.7",
-    "styled-components": "^4.4.1"
+    "styled-components": "^4.4.1",
+    "uglify-es": "3.2.2"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
